--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
     <resources>
       <resource>
         <directory>src/main/resources</directory>
+          <includes>
+              <include>**/*</include>
+          </includes>
         <filtering>true</filtering>
       </resource>
     </resources>
