バニラ対応済み 次csとmmに対応する

--- a/src/main/resources/presents.yml
+++ b/src/main/resources/presents.yml
@@ -2,10 +2,13 @@ presents:
   NewYearGift:
     items:
       - type: VANILLA
-        material: DIAMOND
-        amount: 1
+        itemstack:
+          type: DIAMOND
+          amount: 1
+      - type: CRACKSHOT
+        crackshot: SniperRifle
     start: "2025-01-01"
-    end: "2025-01-03"
-    message: "新年のプレゼント！"
+    end: "2025-01-10"
+    message: "新年のプレゼントを受け取りました！"
     Predictive_Conversion: true
     Passed_at_login: true
