--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
+      <repository>
+          <id>local-repo</id>
+          <url>file://${project.basedir}/lib</url> <>
+      </repository>
   </repositories>
 
   <dependencies>
