--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,11 @@
           <version>1.0</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>io.lumine</groupId>
+          <artifactId>mythicmobs</artifactId>
+          <version>5.0.0</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 </project>
